@@ -4,3 +4,4 @@
 <!ENTITY verify-button "Vérifier">
 <!ENTITY open-button "Ouvrir">
 <!ENTITY save-button "Sauver">
+<!ENTITY cryptandsign-button "Chiffrer et signer">
